Revision history for PDF-Lite

{{$NEXT}}

0.0.11  2022-05-11T08:54:01+12:00
   - Use PDF::Content 0.6.1 core font cache. Prefer core-font loading
     at the PDF level.

0.0.10  2022-04-02T10:49:20+13:00
   - Upload to zef ecosystem

0.0.9  2021-10-09T09:10:40+13:00
   - Replace canvas(&code) with html-canvas(&code) in pdf-canvas.t
     as deprecated in PDF::Content v0.5.8+

0.0.8  2021-06-23T17:01:18+12:00
    - Add class PDF::Lite::Font

0.0.7  2021-06-20T11:59:05+12:00
    - Removing bogus "api" from META6. Flushing CPAN.

0.0.6  2021-01-12T06:49:31+13:00
    - Uploaded to CPAN