@@ -6,8 +6,8 @@
   "build-depends": [
   ],
   "depends": [
-    "PDF::Content:ver<0.6.1+>",
-    "PDF:ver<0.5.1+>"
+    "PDF::Content:ver<0.6.4+>",
+    "PDF:ver<0.5.8+>"
   ],
   "description": "Minimal class for the creation and editing of PDF documents",
   "license": "Artistic-2.0",
